Sunnatilla Header qismini tugatti

--- a/index.html
+++ b/index.html
@@ -12,28 +12,64 @@
 <body>
     <div class="site">
         <!-- Sunnat start -->
-            <!-- Ota div header bo'lsin -->
+        <!-- Ota div header bo'lsin -->
+        <header>
+            <div class="container">
+                <div class="nav">
+                    <input type="checkbox" id="nav-check">
+                    <div class="nav-header">
+                        <div class="nav-title">
+                            <img src="./assets/img/KS.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="nav-btn">
+                        <label for="nav-check">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </label>
+                    </div>
 
+                    <div class="nav-links">
+                        <a href="" target="_blank">Home</a>
+                        <a href="" target="_blank">About</a>
+                        <a href="" target="_blank">Services</a>
+                        <a href="" target="_blank">Contact</a>
+                    </div>
+                </div>
+
+                <div class="flex main">
+                    <div class="typing-demo">
+                        Key of success
+                    </div>
+                    <p class="font-weightlead">Business technology</p>
+                </div>
+        </header>
         <!-- Sunnat end -->
         <!-- Husniddin start -->
-            <!-- Ota div section-one bo'lsin -->
+        <!-- Ota div section-one bo'lsin -->
 
         <!-- Husniddin end -->
         <!-- Azam start -->
-            <!-- Ota div section-two bo'lsin -->
+        <!-- Ota div section-two bo'lsin -->
 
         <!-- Azam end -->
         <!-- Abbos start -->
-            <!-- Ota div section-three bo'lsin -->
-
+        <!-- Ota div section-three bo'lsin -->
+        
         <!-- Abbos end -->
         <!-- Dilnoza start -->
-            <!-- Ota div footer bo'lsin -->
+        <!-- Ota div footer bo'lsin -->
 
         <!-- Dilnoza end -->
     </div>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js"
+        integrity="sha512-tWHlutFnuG0C6nQRlpvrEhE4QpkG1nn2MOUMWmUeRePl4e3Aki0VB6W1v3oLjFtd0hVOtRQ9PHpSfN6u6/QXkQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/main/app.js"></script>
+
 </body>
 
 </html>
