--- a/index.html
+++ b/index.html
@@ -56,7 +56,41 @@
         <!-- Azam end -->
         <!-- Abbos start -->
         <!-- Ota div section-three bo'lsin -->
-        
+        <section class="section-three">
+            <div class="contact_menu">
+                <div class="container">
+                    <p class="logo">Contact Us</p>
+                    <div class="contact_items">
+                        <div class="contact_map">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.1592911067464!2d69.21556431492589!3d41.34889130634455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8d965b9f12b3%3A0xbf601c3432d4afa!2sWebStar%20Academy!5e0!3m2!1sru!2s!4v1671290100666!5m2!1sru!2s"
+                                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                        <div class="contact_register">
+                            <label class="register_item">
+                                Name:
+                                <input type="text" placeholder="Enter your name..." class="info">
+                            </label>
+
+                            <label class="register_item">
+                                Number:
+                                <input type="text" placeholder="Enter your number..." class="info">
+                            </label>
+
+                            <label class="register_item last_item">
+                                Message:
+                                <textarea name="message_info" class="message_info info"
+                                    placeholder="Leave your message..."></textarea>
+
+                            </label>
+
+                            <button class="btn_register">Send</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Abbos end -->
         <!-- Dilnoza start -->
         <!-- Ota div footer bo'lsin -->
