--- a/index.html
+++ b/index.html
@@ -50,10 +50,49 @@
         <!-- Ota div section-one bo'lsin -->
 
         <!-- Husniddin end -->
-        <!-- Azam start -->
+
+        <!--=============== Azam start ===============-->
         <!-- Ota div section-two bo'lsin -->
 
-        <!-- Azam end -->
+        <section class="section_two">
+            <div class="container">
+                <div class="box_textImg flex">
+                    <div class="box_texts">
+                        <h1 class="title">Key of success Business Technology</h1>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam reprehenderit
+                            voluptatem autem molestiae similique eum dolorum expedita,perferendis doloribus vero!</p>
+                    </div>
+                    <div class="box_img">
+                        <img src="./assets/img/sectionTwo_photo.jpg" alt="photo" class="photo">
+                    </div>
+                </div>
+
+                <div class="box_textImg flex">
+                    <div class="box_img">
+                        <img src="./assets/img/sectionTwo_photo.jpg" alt="photo" class="photo">
+                    </div>
+                    <div class="box_texts">
+                        <h1 class="title">Key of success Business Technology</h1>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam reprehenderit
+                            voluptatem autem molestiae similique eum dolorum expedita,perferendis doloribus vero!</p>
+                    </div>
+                </div>
+
+                <div class="box_textImg flex">
+                    <div class="box_texts">
+                        <h1 class="title">Key of success Business Technology</h1>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam reprehenderit
+                            voluptatem autem molestiae similique eum dolorum expedita,perferendis doloribus vero!</p>
+                    </div>
+                    <div class="box_img">
+                        <img src="./assets/img/sectionTwo_photo.jpg   " alt="photo" class="photo">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--=============== Azam end ===============-->
+
         <!-- Abbos start -->
         <!-- Ota div section-three bo'lsin -->
         <section class="section-three">
