A'zam Services THE_END

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                             voluptatem autem molestiae similique eum dolorum expedita,perferendis doloribus vero!</p>
                     </div>
                     <div class="box_img">
-                        <img src="./assets/img/sectionTwo_photo.jpg" alt="photo" class="photo">
+                        <img src="./assets/img/KS.svg" alt="photo" class="photo">
                     </div>
                 </div>
 
                 <div class="box_textImg flex">
                     <div class="box_img">
-                        <img src="./assets/img/sectionTwo_photo.jpg" alt="photo" class="photo">
+                        <img src="./assets/img/KS.svg" alt="photo" class="photo">
                     </div>
                     <div class="box_texts">
                         <h1 class="title">Key of success Business Technology</h1>
@@ -85,7 +85,7 @@
                             voluptatem autem molestiae similique eum dolorum expedita,perferendis doloribus vero!</p>
                     </div>
                     <div class="box_img">
-                        <img src="./assets/img/sectionTwo_photo.jpg   " alt="photo" class="photo">
+                        <img src="./assets/img/KS.svg" alt="photo" class="photo">
                     </div>
                 </div>
             </div>
